crates/vihaco/tests/ui/rfc0007-machine-shared-unknown-core.stderr
error: shared device `device` references `missing_core`, which is not a declared #[core] field
  --> tests/ui/rfc0007-machine-shared-unknown-core.rs:27:14
   |
27 |     #[shared(missing_core)]
   |              ^^^^^^^^^^^^
